# glue-dataverse

./: README.rst  setup.cfg  tox.ini
glue_dataverse/: __init__.py  data_importer.py
