[metadata]
name = glue-dataverse
url = https://github.com/glue-viz/glue-dataverse
description = Experimental Dataverse plugin
long_description = file: README.rst

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
	numpy
	glue-core>=0.15

[options.entry_points]
glue.plugins =
	glue_dataverse = glue_dataverse:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-faulthandler
